--- a/templates/expenses/expenses_list.html
+++ b/templates/expenses/expenses_list.html
@@ -38,8 +38,8 @@
                 <thead class="bg-light text-secondary small text-uppercase">
                     <tr>
                         <th class="ps-4">Date & Time</th>
-                        <th>Summary</th>
                         <th>Items</th>
+                        <th>Description</th>
                         <th>Method</th>
                         <th class="text-end pe-4">Amount</th>
                         <th class="text-end pe-4">Action</th>
